# CodeBug

./: .gitignore  CLAUDE.md  DEBUG_MOCK_VS_REAL.md  Dockerfile  GUIDE_REAL_VS_MOCK.md  README.md  TEST_REPORT.md  agent.py  agent_output.txt  answers.json  app.py  bug_bank.py  check_frontend.py  client.py  comparison_mock_vs_real.py  comprehensive_e2e_test.py  comprehensive_test.py  config.py  environment.py  episodes.json  final_system_check.py  fix_regex.py  flask_app.py  grade_output.txt  grader.py  inference.py  main.py  main_broken.py  models.py  openenv.yaml  output.txt  pyproject.toml  requirements.txt  run_api_test.py  sig.txt  test_16_bugs.py  test_all_bugs.py  test_api.py  test_api_directly.py  test_api_settings.py  (+7 more)
.github/workflows/: sync-huggingface-space.yml
.vibecheck/: last-score.json  sync-queue.json
.vibecheck/flow/: config.json
.vibecheck/provenance/: attestations.db  edits.jsonl
api/: index.py
frontend/: codebug (1).html
server/: __init__.py  app.py
tasks/: __init__.py  scoring.py
tasks/easy/: __init__.py  grader.py
tasks/extra1/: __init__.py  grader.py
tasks/extra2/: __init__.py  grader.py
tasks/hard/: __init__.py  grader.py
tasks/medium/: __init__.py  grader.py
templates/: index.html  landing.html
