[project]
name = "codebug"
version = "1.0.0"
description = "RL environment where an AI agent reviews code to find bugs across 3 difficulty levels."
requires-python = ">=3.10"
authors = [
    { name = "vinith17" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.2",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["*.py"]
